--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
-    "build": "tsc"
+    "build": "next build"
   },
   "keywords": [],
   "author": "",
@@ -14,16 +14,15 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
-    "next": "^9.5.3",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -32,6 +31,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
+    "@types/node": "^14.6.4",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "tsc-watch": "^4.2.9",
